# AgentMemoryToolkit-upstream

./: .env.template  .gitignore  CHANGELOG.md  README.md  azure.yaml  pyproject.toml
Docs/: RELEASING.md  azure_testing.md  concepts.md  design_patterns.md  local_testing.md  operations.md  public_api.md  troubleshooting.md
Docs/architecture/: orchestrators.md
Samples/: Demo_async.ipynb
Samples/Advanced/: advanced_memory_lifecycle.py  advanced_search_patterns.py
Samples/Notebooks/: Demo.ipynb  Demo_async.ipynb  Demo_function_app.ipynb  Demo_function_app_async.ipynb
Samples/Processing/: processing_fact_extraction.py  processing_thread_summary.py  processing_user_profile.py
Samples/Quickstarts/: quickstart_cosmos.py
Samples/Scenarios/: scenario_chat_memory.py  scenario_counter_tuning.py  scenario_customer_support.py  scenario_memory_reconciliation.py  scenario_multi_agent.py  scenario_rag_with_memory.py  scenario_remote_processor.py  scenario_remote_processor_async.py  scenario_tagging_and_filtering.py
agent_memory_toolkit/: __init__.py  _container_routing.py  _counters.py  _query_builder.py  _utils.py  auto_trigger.py  chat.py  cosmos_memory_client.py  embeddings.py  exceptions.py  logging.py  models.py  thresholds.py
agent_memory_toolkit/_base/: __init__.py  base_client.py
agent_memory_toolkit/aio/: __init__.py  auto_trigger.py  chat.py  cosmos_memory_client.py  embeddings.py
agent_memory_toolkit/aio/processors/: base.py  durable.py  inprocess.py
agent_memory_toolkit/aio/services/: __init__.py  pipeline.py
agent_memory_toolkit/aio/store/: __init__.py  memory_store.py
agent_memory_toolkit/processors/: base.py  durable.py  inprocess.py
agent_memory_toolkit/prompts/: __init__.py  _schemas.py  dedup.prompty  extract_memories.prompty  summarize.prompty  summarize_update.prompty  synthesize_procedural.prompty  user_summary.prompty  user_summary_update.prompty
agent_memory_toolkit/services/: __init__.py  _pipeline_helpers.py  pipeline.py
agent_memory_toolkit/store/: __init__.py  _search_helpers.py  memory_store.py
azure/cosmos/agent_memory/: _container_routing.py  _query_builder.py  _utils.py  cosmos_memory_client.py  thresholds.py
azure/cosmos/agent_memory/_base/: base_client.py
azure/cosmos/agent_memory/aio/: cosmos_memory_client.py
azure/cosmos/agent_memory/aio/services/: pipeline.py
azure/cosmos/agent_memory/aio/store/: memory_store.py
azure/cosmos/agent_memory/processors/: base.py
azure/cosmos/agent_memory/prompts/: _schemas.py  extract_memories.prompty
azure/cosmos/agent_memory/services/: _pipeline_helpers.py  pipeline.py
azure/cosmos/agent_memory/store/: memory_store.py
function_app/: function_app.py  local.settings.json.template  requirements.txt
function_app/_vendor/: agent_memory_toolkit-0.1.0-py3-none-any.whl
function_app/orchestrators/: __init__.py  extract_memories.py  synthesize_procedural.py  thread_summary.py  user_summary.py
function_app/shared/: config.py  cosmos_clients.py  pipeline_factory.py
function_app/triggers/: change_feed.py
infra/: README.md  main.bicep  main.parameters.json
infra/modules/: ai-foundry-rbac.bicep  ai-foundry.bicep  cosmos-rbac.bicep  cosmos.bicep  functions.bicep  storage-rbac.bicep
tests/: conftest.py
tests/integration/: test_changefeed_integration.py  test_full_pipeline.py  test_processor_integration.py  test_processor_integration_async.py  test_ttl_lifecycle.py
tests/unit/: test_async_hygiene.py  test_auto_trigger.py  test_chat.py  test_container_routing.py  test_cosmos_memory_client.py  test_embeddings.py  test_exceptions.py  test_logging.py  test_memory_type_multi.py  test_models.py  test_pipeline_confidence.py  test_procedural_synthesis.py  test_process_now.py  test_processing.py  test_query_builder.py  test_reconcile.py  test_thresholds.py  test_utils.py
tests/unit/_base/: test_base_client.py
tests/unit/aio/: test_auto_trigger.py  test_chat.py  test_cosmos_memory_client.py  test_embeddings.py  test_procedural_synthesis.py  test_process_now.py  test_processing.py  test_reconcile_telemetry.py
tests/unit/aio/processors/: test_inprocess.py  test_protocol_satisfaction.py
tests/unit/aio/services/: test_dedup_vector_async.py
tests/unit/aio/store/: test_memory_store.py
tests/unit/function_app/: test_change_feed.py  test_orchestrators.py  test_pipeline_factory.py  test_synthesize_procedural_orchestrator.py
tests/unit/processors/: test_inprocess.py  test_protocol_satisfaction.py
tests/unit/prompts/: test_schema_prompty_conformance.py
tests/unit/services/: test_chaos_extract_persist.py  test_dedup_vector.py  test_extract_dry.py  test_persist_extracted.py  test_pipeline_service.py  test_prompty_loader.py  test_transcript_metadata.py  test_user_summary_topic_tags.py
tests/unit/store/: test_list_tags.py  test_memory_store.py  test_tag_mutation.py
