[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agent_memory_toolkit*"]

[tool.setuptools.package-data]
"agent_memory_toolkit" = ["prompts/*.prompty"]

[project]
name = "agent-memory-toolkit"
version = "0.1.0"
description = "A Python library for storing, retrieving, and transforming AI agent memories backed by Azure Cosmos DB"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
    "azure-cosmos>=4.16.0",
    "azure-identity>=1.20",
    "openai>=1.60",
    "aiohttp>=3.10",
    "pydantic>=2.10",
    "prompty>=2.0.0a9",
    "jinja2>=3.1.4",
    "typing_extensions>=4.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "python-dotenv>=1.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires live Azure services",
    "slow: long-running tests that must be selected explicitly",
    "e2e: requires full pipeline (Cosmos + ADF + AI)",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"Samples/Notebooks/*.ipynb" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["agent_memory_toolkit", "activities", "function_app"]
known-third-party = ["azure", "openai", "pydantic"]

[tool.coverage.run]
source = ["agent_memory_toolkit"]
