[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["azure.cosmos.agent_memory*"]
namespaces = true

[tool.setuptools.package-data]
"azure.cosmos.agent_memory" = ["prompts/*.prompty"]

[project]
name = "azure-cosmos-agent-memory"
version = "0.1.0b2"
description = "Store, retrieve, and transform AI agent memories backed by Azure Cosmos DB"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
authors = [
    {name = "Microsoft Corporation", email = "azurecosmosdb@microsoft.com"},
]
maintainers = [
    {name = "Microsoft Corporation", email = "azurecosmosdb@microsoft.com"},
]
keywords = [
    "azure",
    "cosmos",
    "cosmosdb",
    "agent",
    "memory",
    "llm",
    "ai",
    "openai",
    "rag",
    "vector-search",
    "semantic-memory",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "azure-cosmos>=4.16.0",
    "azure-identity>=1.20",
    "openai>=1.60",
    "aiohttp>=3.10",
    "pydantic>=2.10",
    "prompty>=2.0.0a9",
    "jinja2>=3.1.4",
    "typing_extensions>=4.10",
]

[project.urls]
Homepage = "https://github.com/AzureCosmosDB/AgentMemoryToolkit"
Repository = "https://github.com/AzureCosmosDB/AgentMemoryToolkit"
Issues = "https://github.com/AzureCosmosDB/AgentMemoryToolkit/issues"
Documentation = "https://github.com/AzureCosmosDB/AgentMemoryToolkit/tree/main/Docs"
Changelog = "https://github.com/AzureCosmosDB/AgentMemoryToolkit/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "python-dotenv>=1.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires live Azure services",
    "slow: long-running tests that must be selected explicitly",
    "e2e: requires full pipeline (Cosmos + ADF + AI)",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"Samples/Notebooks/*.ipynb" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["azure.cosmos.agent_memory", "activities", "function_app"]
known-third-party = ["azure", "openai", "pydantic"]

[tool.coverage.run]
source = ["azure.cosmos.agent_memory"]
